<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina5_5" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Example_Project" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HelloWorld" translatesAutoresizingMaskIntoConstraints="NO" id="JCi-I4-Q5D">
                                <rect key="frame" x="19.666666666666657" y="-132" width="375" height="1000"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="375" id="a9h-eJ-to0"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a label!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcX-jn-96y">
                                <rect key="frame" x="153" y="20" width="108" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MtZ-Zc-nMj">
                                <rect key="frame" x="172.66666666666666" y="698" width="69" height="30"/>
                                <state key="normal" title="Say Hello!"/>
                                <connections>
                                    <action selector="didTapSayHello:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TbD-C1-x7o"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lPG-at-Fto">
                                <rect key="frame" x="136.66666666666669" y="49" width="141.00000000000006" height="30"/>
                                <state key="normal" title="Next View Controller"/>
                                <connections>
                                    <segue destination="eQl-fg-HN7" kind="show" identifier="segue_SecondView" id="DhJ-FQ-7VO"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gRr-uR-579">
                                <rect key="frame" x="0.0" y="707" width="42" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="lPG-at-Fto" firstAttribute="centerX" secondItem="JCi-I4-Q5D" secondAttribute="centerX" id="96M-eU-fBx"/>
                            <constraint firstItem="gRr-uR-579" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gdu-I1-I6p"/>
                            <constraint firstItem="JCi-I4-Q5D" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="QQs-iR-aUb"/>
                            <constraint firstItem="OcX-jn-96y" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Qsa-LD-YMR"/>
                            <constraint firstItem="MtZ-Zc-nMj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Shs-Xz-sVD"/>
                            <constraint firstItem="JCi-I4-Q5D" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qfE-r3-gvZ"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="MtZ-Zc-nMj" secondAttribute="bottom" constant="8" symbolic="YES" id="str-mg-cCA"/>
                            <constraint firstItem="OcX-jn-96y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vHG-L7-dg3"/>
                            <constraint firstItem="lPG-at-Fto" firstAttribute="top" secondItem="OcX-jn-96y" secondAttribute="bottom" constant="8" id="wGb-uR-9U4"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="gRr-uR-579" secondAttribute="bottom" constant="8" id="zdn-wY-Mjm"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="helloLabel" destination="OcX-jn-96y" id="UiM-Ew-iE8"/>
                        <outlet property="version" destination="gRr-uR-579" id="wA0-B2-xjp"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="329" y="36"/>
        </scene>
        <!--Second View Controller-->
        <scene sceneID="dWl-Q1-6OM">
            <objects>
                <viewController id="eQl-fg-HN7" customClass="SecondViewController" customModule="Example_Project" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="m5G-FJ-9kY"/>
                        <viewControllerLayoutGuide type="bottom" id="35Q-8D-C1P"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="4xd-i2-Xc7">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TGO-CB-3UZ">
                                <rect key="frame" x="180" y="353" width="54" height="30"/>
                                <state key="normal" title="Dismiss"/>
                                <connections>
                                    <action selector="didTapDismiss:" destination="eQl-fg-HN7" eventType="touchUpInside" id="Apk-BV-wtd"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ot-nq-wNC">
                                <rect key="frame" x="186" y="76" width="42" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="TGO-CB-3UZ" firstAttribute="centerX" secondItem="4xd-i2-Xc7" secondAttribute="centerX" id="e3W-Pu-Xt0"/>
                            <constraint firstItem="TGO-CB-3UZ" firstAttribute="centerY" secondItem="4xd-i2-Xc7" secondAttribute="centerY" id="l6A-dX-y3d"/>
                            <constraint firstItem="2Ot-nq-wNC" firstAttribute="centerX" secondItem="4xd-i2-Xc7" secondAttribute="centerX" id="xR6-SN-5Va"/>
                            <constraint firstItem="2Ot-nq-wNC" firstAttribute="top" secondItem="m5G-FJ-9kY" secondAttribute="bottom" constant="56" id="xth-yS-yxM"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="display" destination="2Ot-nq-wNC" id="5B9-MT-Ieg"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="3G4-i4-dKG" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1093.5999999999999" y="36.431784107946029"/>
        </scene>
    </scenes>
    <resources>
        <image name="HelloWorld" width="2000" height="1000"/>
    </resources>
</document>
