...
    override func viewWillAppear(_ animated: Bool) {
        trackScreenView(screenName: "Home Screen")
    }

    @IBOutlet weak var helloLabel: UILabel!
    @IBAction func didTapSayHello(_ sender: Any) {
        helloLabel.text = "Hello World!"

        DispatchQueue.global(qos: .background).async {
            self.poorlyWrittenFunction(arbitraryNumber:4)
        }
    }

...
